--- a/style.css
+++ b/style.css
@@ -2748,6 +2748,10 @@ a.em-active-button:hover {
 .single_case_study_thumb img {
     width: 100%;
 }
+
+#img_folio{
+    height: 200px;
+}
 .single_case_study_content {
     position: absolute;
     left: 0;
@@ -3954,7 +3958,7 @@ to{-webkit-transform:rotate(360deg) translate(-10px) rotate(-360deg);-moz-transf
     width: 100%;
     height: 50px;
     padding-left: 15px;
-    background: transparent;
+    /* background: transparent; */
     border: 1px solid #fff;
     border-radius: 5px;
     color: #fff;
@@ -3963,7 +3967,7 @@ to{-webkit-transform:rotate(360deg) translate(-10px) rotate(-360deg);-moz-transf
 
 .form_box textarea {
     width: 100%;
-    background: transparent;
+    /* background: transparent; */
     padding-left: 15px;
     padding-top: 20px;
     height: 250px;
